enviando alterações em descrições de projetos

--- a/index.html
+++ b/index.html
@@ -383,9 +383,7 @@
                         <div class="folio-item__cat">Marca</div>
                         <h4 class="folio-item__title">FW Sports Assessoria Esportiva</h4>
                     </div>
-                    <a href="https://fwsports.com.br/" title="Project Link" class="folio-item__project-link">
-                        Project Link
-                    </a>
+                    <a href="https://fwsports.com.br/" title="Project Link" class="folio-item__project-link">Link Projeto</a>
                     <div class="folio-item__caption">
                         <p>Para este cliente está sendo realizado o desenvolvimento web e aplicações de suporte a novos atletas no mundo do Futebol. Empresa localizada em Curitiba/Brasil. </p>
                     </div>
@@ -403,7 +401,7 @@
                         <div class="folio-item__cat">Marca</div>
                         <h4 class="folio-item__title">SKI e-commerce</h4>
                     </div>
-                    <a href="#" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="#" title="Project Link" class="folio-item__project-link">Link Projeto</a>
                     <div class="folio-item__caption">
                         <p>Sistema de e-commerce para comercio de eletrônicos e periféricos de informática, empresa localizada em Guarapuava/Brasil.</p>
                     </div>
