efetuando correção no link do site no copyright

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
 
                 <div class="ss-copyright">
                     <span>All Rights Reserved © 2024</span> 
-                    <span>Desenvolvido por <a href="https:beratech.com.br">Bera Tech Sistemas</a></span>
+                    <span>Desenvolvido por <a href="https://beratech.com.br">Bera Tech Sistemas</a></span>
                 </div>
             </div>
 
