enviando alterações no descritivo hover das imagens do portfolio

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.1.jpg" title="The Red Wheel" data-size="1050x700">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.1.jpg" title="Smart E-commerce" data-size="1050x700">
                             <img src="images/portfolio/site.1.jpg" 
                                  srcset="images/portfolio/site.1.jpg 1x, images/portfolio/site.1.jpg 2x" alt="">
                         </a>
@@ -320,7 +320,7 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.2.jpg" title="Music Life" data-size="1050x700">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.2.jpg" title="Recanto Liz e Spa" data-size="1050x700">
                             <img src="images/portfolio/site.2.jpg" 
                                  srcset="images/portfolio/site.2.jpg 1x, images/portfolio/site.2.jpg 2x" alt="">
                         </a>
@@ -338,7 +338,7 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.3.jpg" Title="OI Logo" data-size="1050x700">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.3.jpg" Title="Buffet Porco no Rolete" data-size="1050x700">
                             <img src="images/portfolio/site.3.jpg" 
                                  srcset="images/portfolio/site.3.jpg 1x, images/portfolio/site.3.jpg 2x" alt="">
                         </a>
@@ -356,7 +356,7 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.6.jpg" title="Corrugated Sheets" data-size="1050x700">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.6.jpg" title="Beckys Burger" data-size="1050x700">
                             <img src="images/portfolio/site.6.jpg" 
                                  srcset="images/portfolio/site.6.jpg 1x, images/portfolio/site.6.jpg 2x" alt="">
                         </a>
@@ -374,7 +374,7 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.4.jpg" title="Sand Dunes" data-size="1050x700">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.4.jpg" title="FW sports" data-size="1050x700">
                             <img src="images/portfolio/site.4.jpg" 
                                  srcset="images/portfolio/site.4.jpg 1x, images/portfolio/site.4.jpg 2x" alt="">
                         </a>
@@ -392,7 +392,7 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.5.jpg" title="The Lamp" data-size="1050x700">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.5.jpg" title="Ski E-commerce" data-size="1050x700">
                             <img src="images/portfolio/site.5.jpg" 
                                  srcset="images/portfolio/site.5.jpg 1x, images/portfolio/site.5.jpg 2x" alt="">
                         </a>
