enviando projeto a galeria

--- a/index.html
+++ b/index.html
@@ -106,12 +106,14 @@
             </div>
         </div>
 
+        <!--
         <div class="s-hero__video">
             <a class="s-hero__video-link" href="#?color=01aef0&amp;title=0&amp;byline=0&amp;portrait=0" data-lity="">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M21 12l-18 12v-24z"/></svg>
                 <span class="s-hero__video-text"></span>
             </a>
         </div>
+        -->
 
         <div class="s-hero__scroll">
             <a href="#about" class="s-hero__scroll-link smoothscroll">
@@ -407,6 +409,27 @@
                     </div>
                 </div>
             </div> <!-- end column -->
+
+            <div class="column" data-aos="fade-up">
+                <div class="folio-item">
+                    <div class="folio-item__thumb">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/site.7.jpg" title="Ski E-commerce" data-size="1050x700">
+                            <img src="images/portfolio/site.7.jpg" 
+                                 srcset="images/portfolio/site.7.jpg 1x, images/portfolio/site.7.jpg 2x" alt="">
+                        </a>
+                    </div>
+                    <div class="folio-item__info">
+                        <div class="folio-item__cat">Marca</div>
+                        <h4 class="folio-item__title">Mobi Curitiba</h4>
+                    </div>
+                    <a href="https://mobicuritiba.com.br" title="Project Link" class="folio-item__project-link">Link Projeto</a>
+                    <div class="folio-item__caption">
+                        <p>Uma empresa com transportes adaptados para passageiros com dificuldades de locomoção e com necessidades especiais.</p>
+                    </div>
+                </div>
+            </div> <!-- end column -->
+
+            
 
         </div> <!-- folio-list -->
 
