atualizando header com logo otimizada horizontal

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
         <div class="s-header__logo">
             <a href="index.html">
-                <h6 class="logo-header" >BERA TECH</h6>
-                <img src="#" alt="">
+                <h6 class="logo-header" ></h6>
+                <img src="/images/logoBeratechSistemas.png" alt="">
             </a>
         </div>
 
