atualização de intro

--- a/index.html
+++ b/index.html
@@ -143,17 +143,15 @@
                 </h1>
 
                 <p class="lead" data-aos="fade-up">
-                    A empresa foi batizada com meu apelido "Bêra" que já me acompanha a mais de 20 anos.
-                    Meu propósito é oferecer serviços personalizados e com entrega rápida. Sou desenvolvedor 
-                    web full stack com experiência em projetos freelancers desde 2022, possuo sólida 
-                    atuação em Front-End e Back-End, também especializado em soluções mobile first. 
-                    Minha trajetória inclui um forte background em design e criação de conteúdos, 
-                    além de experiência com branding para novas marcas..<br><br>
+                    Sou desenvolvedor web full stack e fundador da Bera Tech, nome inspirado em um apelido que 
+                    carrego há mais de 20 anos e que representa proximidade, confiança e entrega de valor. Desde 2022, atuo com 
+                    projetos freelancers, oferecendo soluções completas em Front-End e Back-End, sempre com foco em responsividade,
+                    desempenho e usabilidade. <br><br>
 
-                    Transformamo sua ideia em realidade, com designs modernos e responsivos. Meus
-                    serviços foram pensados para aumentar sua visibilidade com uma ousadia sob 
-                    medida que seu negócio merece. Concentre-se no seu crescimento, deixe o resto 
-                    com meu time.   
+                    Além da programação, tenho um histórico sólido em design, criação de conteúdo digital e branding para novas marcas, 
+                    o que me permite oferecer uma solução integrada do conceito ao código. Minha missão é clara: Ajudar empresas a 
+                    aumentarem sua presença digital por meio de designs modernos, responsivos e funcionalidades sob medida. Você foca 
+                    no crescimento. Eu e meu time cuidamos da estrutura que sustenta essa evolução.  
                 </p>
             </div>
 
